--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@ function check(){
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-     <!-- <script src="https://use.fontswesome.com/releases/v5.0.8/js/all.js"</script> -->
-     <!-- <script>
+      <script src="https://use.fontawesome.com/releases/v5.4.1/css/all.css"</script>
+      <script>
      $('p').on('click', function(){
        $('h1').fadeToggle();
      });
-     </script> -->
+     </script>
      <script src="js/main.js"></script>
   </body>
 </html>
