--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        <h1 class="display-6 text-light">ENERGIZE YOUR DIET!</h1>
           <p class="lead text-light">Simply enter your email below and you will receive free ebooks featuring diet guides, workout tips, and delicious, easy to cook recipes!</p>
           <p class="text-light">As an added BONUS, you'll receive an opportunity for a Free bottle of Grass-Fed, Low Carb Protein!</p>
-        <a class="btn btn-success btn-lg" href="#" role="button">GET MY EBOOK NOW</a>
+        <a class="btn btn-success btn-lg" id="introBtn" href="#" role="button">GET MY EBOOK NOW</a>
       </div>
   </div>
 
@@ -59,7 +59,7 @@
    <div class="container-fluid">
      <h3 class="display-10 text-light">Tell Us About Yourself</h3>
       <div class="dropdown">
-        <button class="btn btn-success btn-md dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="btn btn-success btn-md dropdown-toggle" id="intro" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
          Gender</button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#">male</a>
@@ -82,7 +82,7 @@
     </div>
 
           <div class="btn"
-            <button class="btn btn-success btn-lg" type="button"  aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-success btn-lg" id="resultsBtn" type="button"  aria-haspopup="true" aria-expanded="false">
               Next</button>
           </div>
 </div>
