--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
   <div class="jumbotron">
      <div id="run1">
        <h1 class="display-6 text-light">ENERGIZE YOUR DIET!</h1>
-          <p class="lead text-light">Simply enter your email below and you will receive free ebooks featuring diet guides, workout tips, and delicious, easy to cook recipes!</p>
-          <p class="text-light">As an added BONUS, you'll receive an opportunity for a Free bottle of Grass-Fed, Low Carb Protein!</p>
+          <p class="lead text-light">Simply enter your email below and you will receive free ebooks
+             featuring <br>diet guides, workout tips, and delicious, easy to cook recipes!</p>
+          <p class="text-light">As an added BONUS, you'll receive an opportunity for a Free bottle of Grass-Fed,<br> Low Carb Protein!</p>
         <a class="btn btn-success btn-lg" id="introBtn" href="#" role="button">GET MY EBOOK NOW</a>
       </div>
-  </div>
+  <!-- </div> -->
 
 <div id="run2" class="run2-hidden">
    <div class="container-fluid bg-success">
@@ -104,6 +105,7 @@
       </div>
     </div>
 </div>
+</div>
 
 
 <div class="row welcome text-center">
@@ -118,6 +120,7 @@
 </div>
 
   <div class="container fluid padding">
+
     <div class="row padding">
       <div class="col-md-4">
         <div class="card">
@@ -152,15 +155,15 @@
 </div>
 
 
-<div class = "container-fluid padding">
+<div class="container-fluid padding mt-5 mb-2">
   <div class="row welcome text-center">
-    <div class="col-12">
+    <div class="col-12 mt-4">
       <h2>Chow Time</h2>
     </div>
   </div>
 </div>
 
-  <div class="container-fluid padding">
+  <div class="container-fluid padding mt-5 mb-5">
       <div class="row padding">
         <div class="col-lg-6">
             <p> Each month we'll send you a recipes and diet guides based on your specific needs. Simply join up for free and tell us a little about yourself and you'll be on your way to a healthier life! </p>
