--- a/index.html
+++ b/index.html
@@ -184,6 +184,14 @@
  </div>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Dietseekers</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+       </button>
+       </div>
  <div class="section5">
    <div class="container-fluid">
      <div class="row welcome text-center">
@@ -195,10 +203,23 @@
       <div class="col-12"><p id='showGender'>Your Gender is:</p></div>
       <br>
     <div class="col-12"><p id='showAge'>Your Age is:</p></div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+      </div>
     </div>
   </div>
 </div>
 </div>
+</div>
+</div>
+</div>
+
+<footer class="footer">
+     <div class="container">
+       <span class="text-muted">Dietseekers<br>Code Test Build with Bootstrap</span>
+     </div>
+   </footer>
 
 
     <!-- Optional JavaScript -->
